# h2-trailers

./: Cargo.toml  README.md
client/: Cargo.toml  main-reqwest.rs  main.rs
server/: Cargo.toml  main.rs
