[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "h2client"
path = "main.rs"
doc = false

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
