[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "h2server"
path = "main.rs"
doc = false

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http2", "tcp"] }
